zero-schema-macros/tests/ui/fail/40_hidden_wire_copy.stderr
error[E0277]: the trait bound `PublicRootWire: std::marker::Copy` is not satisfied
  --> tests/ui/fail/40_hidden_wire_copy.rs:13:20
   |
13 |     require_copy::<Wire>();
   |                    ^^^^ the trait `std::marker::Copy` is not implemented for `PublicRootWire`
   |
note: required by a bound in `require_copy`
  --> tests/ui/fail/40_hidden_wire_copy.rs:9:20
   |
9  | fn require_copy<T: Copy>() {}
   |                    ^^^^ required by this bound in `require_copy`
help: consider annotating `PublicRootWire` with `#[derive(Copy)]`
   |
4  + #[derive(Copy)]
5  | #[zero(crate = zs)]
   |
